--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
         <li class="nav-item">
           <a class="nav-link active"  style="color: white;" aria-current="page" routerLink="/employees">Employee</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active"  type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal" style="color: white;" aria-current="page" routerLink="/employees/add">Add employee</a>
+        </li>
+        
       </ul>
     </div>
   </div>
